@@ -198,6 +198,7 @@ Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 
 [Prereqs]
+Path::Tiny = 0.050
 
 [Prereqs::Soften]
 to_relationship = recommends
