@@ -28,6 +28,7 @@ srcreadme        = mkdn
 ;version_rel_time_zone = Pacific/Auckland
 
 [Prereqs]
+Path::Tiny = 0.050 ; No fatalized iterators
 
 [Prereqs::Soften]
 to_relationship = recommends
