@@ -1,6 +1,8 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.003001
+ [Changed / runtime requires]
+ - Path::Tiny 0 → 0.050
 
 1.003000 2014-08-29T07:46:22Z
  [Added / runtime requires]
